2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-03  Roman Kennke  <roman@kennke.org>

        * javax/swing/text/GapContent.java:
        Removed debugging output stuff, which I accidentally left in.

	2005-05-03  Roman Kennke  <roman@kennke.org>

        * javax/swing/text/GapContent.java:
        Implemented a real GapContent. Only the public methods have
        been implemented so far and still no UndoableEdit support.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-02  David Gilbert  <david.gilbert@object-refinery.com>

        * java/text/DecimalFormat.java
        (hashCode): Reimplemented and added API docs.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-25  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/metal/MetalBorders.java:
        Added inner class ScrollPaneBorder.
        * javax/swing/plaf/metal/MetalLookAndFeel.java
        (initComponentDefaults): Added default for "ScrollPane.border"
        to use the new ScrollPaneBorder.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-01  Mark Wielaard  <mark@klomp.org>

        * native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c:
        (window_delete_cb): Don't use C++ style comments.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	* include/Makefile.am (NOINSTALL_JNI_DERIVED_HDRS):
 	Added gnu_classpath_VMStackWalker.h.

	* libraries/clib/native/gnu_classpath_VMStackWalker.c:
	New file.

	Resynced with GNU Classpath.

	2005-04-30  Mark Wielaard  <mark@klomp.org>

        * java/io/ObjectInputStream.java
        (currentLoader): Don't create SecurityManager, directly call
        VMObjectInputStream.currentClassLoader().
        (resolveProxyClass): Use currentLoader().
        * vm/reference/java/io/VMObjectInputStream.java
        (currentClassLoader(SecurityManager)): Removed.
        (currentClassLoader): New method.